--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
+    "@types/redux-thunk": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-thunk": "^1.0.0",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
